# epo-siggraph

./: .gitignore  CMakeLists.txt  epo-siggraph.tex  epo.sty  make_gmsh_sphere.ipynb  scratch.ipynb  setup.py  test.py  test_eikonal_adaptive_gauss_seidel.ipynb  test_eikonal_dijkstra.ipynb  test_eikonal_test.ipynb  test_pyvista.ipynb
src/: common.hpp  eikonal.cpp  eikonal.hpp  eikonal_adaptive_gauss_seidel.cpp  eikonal_adaptive_gauss_seidel.hpp  eikonal_dijkstra_like.cpp  eikonal_dijkstra_like.hpp  geometry.cpp  geometry.hpp  main.cpp  olim.cpp  pybind11_common.hpp  tetra_mesh.cpp  tetra_mesh.hpp
